Showcase: scrollbar issues
is-touch class added to container for touch devices

--- a/widgets/showcase/src/styles/components/RideStylerShowcasePaginationComponent.scss
+++ b/widgets/showcase/src/styles/components/RideStylerShowcasePaginationComponent.scss
@@ -7,11 +7,15 @@
         height: 100%;
 
         white-space: nowrap;
-        
-        -webkit-overflow-scrolling: touch;        
+
+        -webkit-overflow-scrolling: touch;
         scroll-behavior: smooth;
         overflow: auto;
-        -webkit-mask-image: linear-gradient(90deg, transparent, black 1%, black, 99%, transparent);
+        overflow-y: hidden;
+
+        .is-touch & {
+            height: calc(100% + 20px);
+        }
     }
 
     &-option {
@@ -61,7 +65,7 @@
 
             line-height: 0.3em;
             font-size: 2em;
-            
+
             position: absolute;
             left: 50%;
 
@@ -94,13 +98,13 @@
             min-width: 15%;
         }
     }
-    
+
     $nextPreviousMargin: 10px;
     $nextPreviousSize: 30px;
 
     &-next, &-prev {
         color: white;
-        
+
         position: absolute;
         top: 40px;
 
