--- a/widgets/showcase/src/styles/responsive/tv/_vehicle-visualization.scss
+++ b/widgets/showcase/src/styles/responsive/tv/_vehicle-visualization.scss
@@ -10,7 +10,7 @@ $tabBarWidth: 130px;
 }
 
 .ridestyler-showcase-customizations {
-    height: 23%;
+    height: 24%;
 }
 
 .ridestyler-showcase-customizations, .ridestyler-showcase-viewport, .ridestyler-showcase-rotate-vehicle {
